tests/golden/errors/ctx-timeout-inf.rk
import "ctx"

fn main() {
    c := ctx.timeout(ctx.background(), 1.0 / 0.0)
    print(c.done())
}
